Add test data to run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
+          patterns: '**/locales/en-*.ts'
           level: info
 
   test-pr-review:
@@ -39,5 +40,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           level: info
-          patterns: "**.md"
+          patterns: '**/locales/en-*.ts'
           custom_api_endpoint: https://languagetool.org/api
